# retail-setup

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: build-retail-setup-push-tag-shared.yaml.yaml  ci.yaml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
contrib/: code_check.py  compare_coverage.py  gen_env.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  gunicorn.conf.py
docs/: SPEC_KIT.md
feature/: models.py
retail/: asgi.py  celery.py  settings.py  swagger.py  urls.py  wsgi.py
retail/admin/: apps.py  sites.py  urls.py
retail/agents/: apps.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
retail/api/: base_service_view.py  routers.py  tasks.py
retail/broadcasts/: apps.py  handle.py  models.py
retail/clients/: base.py
retail/contracts/: acceptance_timezone.py  admin.py  apps.py  exceptions.py  models.py  renderers.py  serializers.py  tasks.py  translations.py  urls.py  views.py  weasyprint_renderer.py
retail/event_driven/: __init__.py  handle.py  pika_handle.py
retail/features/: admin.py  apps.py  forms.py  integrated_feature_eda.py  models.py  urls.py  views.py  widgets.py
retail/healthcheck/: apps.py  views.py
retail/integrations/: apps.py  models.py
scripts/: populate_country_phone_codes.py
(+826 files in other folders)
