[tool.poetry]
name = "retail-setup"
version = "0.0.1"
description = ""
authors = ["Weni"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
