[tool.poetry]
name = "retail-setup"
version = "0.0.1"
description = ""
authors = ["Weni"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
weni-eda = "0.1.1"
gunicorn = "^22.0.0"
mozilla-django-oidc = "^4.0.1"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
celery = "^5.1.2"
django-redis = "^5.2.0"
sentry-sdk = "^2.20.0"
babel = "^2.17.0"
pre-commit = "^4.2.0"
boto3 = "^1.38.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
coverage = "^7.8.2"

[tool.pyright]
typeCheckingMode = "off"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
